# tdo

./: CLAUDE.md  Cargo.toml  README.md  TDO_GUIDE_GAPS.md  dist-workspace.toml
.config/tracey/: config.styx
.github/workflows/: ci.yml  release.yml
docs/: guide.md  things3-schema.md  tracey-bug.md
docs/spec/: cli.md
src/: dates.rs  db.rs  error.rs  main.rs  model.rs  output.rs  queries.rs  write.rs
tests/: fixtures.rs  integration.rs
