[package]
name = "tdo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tdo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
